gcc/testsuite/rust/rustc/ui/parser/pat-lt-bracket-5_dg.rs
fn main() {
    let v[0] = v[1];
// { dg-error ".E0425." "" { target *-*-* } .-1 }
// { dg-error ".E0425." "" { target *-*-* } .-2 }
}

